# reviewiq

./: .gitignore  LICENSE  README.md  REVIEWIQ.md  go.mod  install.sh  pyproject.toml  uninstall.sh
.claude/commands/: review-check.md  review-explain.md  review-full.md  review-impact.md  review-pr.md  review-resolve.md  review-retract.md  review-summarize.md  review-wontfix.md  reviewiq-approve.md  reviewiq-ask.md  reviewiq-fix.md  reviewiq-full.md  reviewiq-pr.md  reviewiq-recheck.md  reviewiq-resolve.md  reviewiq-retract.md  reviewiq-status.md  reviewiq-test.md  reviewiq-wontfix.md
.github/workflows/: pr-review.yml
.pr-review/: agent.md
.pr-review/skills/: airflow.md  credit-bureau.md  data-privacy.md  devops.md  elasticsearch.md  financial-microservices.md  kafka.md  maintainability.md  messaging.md  migrations.md  mongodb.md  orm.md  performance.md  postgres.md  redis.md  sql.md  stability.md  transactions.md
cmd/reviewiq/: main.go
internal/ci/: ci.go
internal/engine/: engine.go
internal/git/: git.go
internal/github/: github.go
internal/skills/: skills.go
internal/state/: state.go
scripts/: review-agent.sh  review_agent.py  state.py
src/reviewiq/: __init__.py  __main__.py  ci.py  cli.py  engine.py  git.py  skills.py  state.py
src/reviewiq/templates/: agent.md
src/reviewiq/templates/skills/: commandments.md  fintech.md  frameworks.md  fraud.md  india-regulatory.md  languages.md  notifications.md  scalability.md  security.md
